--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
+  "proxy": {
+    "/api":  {
+        "target": "http://server:5000"
+    }
+  },
   "babel": {
     "presets": [
       "@vue/app"
