Add image blog testing code

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -2,12 +2,16 @@ FROM node:14.2
 
 WORKDIR /app
 
-COPY . .
-
 # RUN ["sudo", "apt-get", "install", "build-essential"]
 
-RUN ["yarn", "config", "set", "cache-folder", "./.yarn-cache"]
+COPY package.json .
+COPY yarn.lock .
+COPY .yarn-cache .
+RUN ["yarn", "config", "set", "cache-folder", "/app/.yarn-cache"]
+
 RUN ["yarn", "upgrade"]
 RUN ["yarn", "install"]
+
+COPY . .
 
 CMD ["yarn", "serve"]
